--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,15 @@
 	"author": "D.Romero <romerodeveloper@techie.com>",
 	"license": "MIT",
 	"dependencies": {
-		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"body-parser": "^1.18.2",
 		"compression": "^1.7.1",
 		"express": "^4.16.2",
 		"mongoose": "^5.0.1",
 		"morgan": "^1.9.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"nodemon": "^1.14.11"
 	}
 }
