--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
 		"compression": "^1.7.1",
 		"express": "^4.16.2",
 		"mongoose": "^5.0.1",
-		"morgan": "^1.9.0"
+		"morgan": "^1.9.0",
+		"socket.io": "^2.0.4"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
